fix wrong class used for method in layoutsubmit for backups, reword the breakpoints to make it easy for low tech users to never break their layout, clean up some CSS in debug styles

--- a/at_core/styles/sass/devel.colorize.layout.scss
+++ b/at_core/styles/sass/devel.colorize.layout.scss
@@ -39,8 +39,9 @@ body {
     font: 12px/1 Arial;
 
     .block {
-      height: 40px;
+      height: 0;
       width: 100%;
+      overflow: hidden;
     }
 
     .block * {
